# django-product-search

./: README.md  pyproject.toml
product_search/product/: admin.py  views.py
product_search/product/management/commands/: populate_data.py
product_search/product/migrations/: 0001_initial.py  0002_category_parent_remove_product_category_and_more.py
product_search/product/models/: category.py  product.py
product_search/product/static/product/: product_list.css
product_search/product/templates/product/: product_list.html
product_search/product/tests/: test_models.py
product_search/product_search/: asgi.py  settings.py  urls.py  wsgi.py
