[tool.poetry]
name = "django-product-search"
version = "0.1.0"
description = "Using django build a product searching application"
authors = ["tracy luo <cui_luo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
